[project]
name = "pui"
version = "0.5.0"
description = "TUI for managing processes listening on ports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["textual>=0.89.0", "psutil>=6.0.0"]

[project.scripts]
pui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
